[gd_scene load_steps=16 format=3 uid="uid://dr87566m21m1k"]

[ext_resource type="Texture2D" uid="uid://bvqndrwlyt3t6" path="res://assets/sunsetintheswamp.png" id="1_fe7br"]
[ext_resource type="Script" uid="uid://smfggmmbqhnw" path="res://scripts/MiniGames/farmLevel4.gd" id="1_rfdi1"]
[ext_resource type="Texture2D" uid="uid://ds0iin0t0tcf" path="res://assets/items/Orange/scaled-at-50/b_No.png" id="2_rfdi1"]
[ext_resource type="Texture2D" uid="uid://cemn0bqsx2kgt" path="res://assets/items/Red/scaled-at-50/b_No.png" id="3_a6mj7"]
[ext_resource type="FontFile" uid="uid://jss3joppgef5" path="res://assets/fonts/lucasarts-scumm-outline.fnt" id="4_gryjl"]
[ext_resource type="Texture2D" uid="uid://bhyjwcc6qwhih" path="res://assets/items/Orange/scaled-at-50/b_Background.png" id="5_3l386"]
[ext_resource type="Texture2D" uid="uid://b8qbmqjmc7m1" path="res://assets/items/Red/scaled-at-50/b_Background.png" id="6_6ugb6"]
[ext_resource type="Texture2D" uid="uid://b8x2fy1imvtyn" path="res://assets/items/Orange/scaled-at-50/b_Forward1.png" id="7_gwvmr"]
[ext_resource type="Texture2D" uid="uid://cfctx7evwewdw" path="res://assets/items/Red/scaled-at-50/b_Forward1.png" id="8_unb7j"]
[ext_resource type="AudioStream" uid="uid://cjcnqrxa8wkw6" path="res://assets/sounds/051_use_item_01.wav" id="9_l1cm7"]
[ext_resource type="AudioStream" uid="uid://xax3juonscc0" path="res://assets/sounds/game_bg.mp3" id="10_04lwe"]
[ext_resource type="AudioStream" uid="uid://bdmf3382te8dp" path="res://assets/sounds/001_Hover_01.wav" id="11_0v7jr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_preps"]
atlas = ExtResource("2_rfdi1")

[sub_resource type="AtlasTexture" id="AtlasTexture_gvl5f"]
atlas = ExtResource("3_a6mj7")

[sub_resource type="AtlasTexture" id="AtlasTexture_paskt"]
atlas = ExtResource("3_a6mj7")

[node name="FarmLevel4" type="Node2D"]
script = ExtResource("1_rfdi1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -6.0
offset_top = -13.0
offset_right = 1157.0
offset_bottom = 687.0
texture = ExtResource("1_fe7br")

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 1051.0
offset_top = 51.0
offset_right = 1135.0
offset_bottom = 135.0
texture_normal = SubResource("AtlasTexture_preps")
texture_pressed = SubResource("AtlasTexture_gvl5f")
texture_hover = SubResource("AtlasTexture_paskt")
stretch_mode = 5

[node name="Question" type="Label" parent="."]
offset_left = 28.0
offset_top = 47.0
offset_right = 1015.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="1" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 77.0
offset_top = 202.0
offset_right = 187.0
offset_bottom = 323.0
texture_normal = ExtResource("5_3l386")
texture_pressed = ExtResource("6_6ugb6")
texture_hover = ExtResource("6_6ugb6")

[node name="Label" type="Label" parent="Question/1"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 136.0
offset_right = 182.0
offset_bottom = 154.5
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="2" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 335.0
offset_top = 200.0
offset_right = 445.0
offset_bottom = 321.0
texture_normal = ExtResource("5_3l386")
texture_pressed = ExtResource("6_6ugb6")
texture_hover = ExtResource("6_6ugb6")

[node name="Label" type="Label" parent="Question/2"]
layout_mode = 0
offset_left = -73.0
offset_top = 134.0
offset_right = 207.0
offset_bottom = 239.0
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="3" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 628.0
offset_top = 198.0
offset_right = 738.0
offset_bottom = 319.0
texture_normal = ExtResource("5_3l386")
texture_pressed = ExtResource("6_6ugb6")
texture_hover = ExtResource("6_6ugb6")

[node name="Label" type="Label" parent="Question/3"]
layout_mode = 0
offset_left = -54.0
offset_top = 123.0
offset_right = 177.0
offset_bottom = 215.0
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 30

[node name="4" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 911.0
offset_top = 202.0
offset_right = 1021.0
offset_bottom = 323.0
texture_normal = ExtResource("5_3l386")
texture_pressed = ExtResource("6_6ugb6")
texture_hover = ExtResource("6_6ugb6")

[node name="Label" type="Label" parent="Question/4"]
layout_mode = 0
offset_left = -40.0
offset_top = 130.0
offset_right = 160.0
offset_bottom = 204.0
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Next" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 990.0
offset_top = 465.0
offset_right = 1098.0
offset_bottom = 562.0
texture_normal = ExtResource("7_gwvmr")
texture_pressed = ExtResource("8_unb7j")
texture_hover = ExtResource("8_unb7j")
stretch_mode = 5

[node name="Feedback" type="Label" parent="Question"]
layout_mode = 0
offset_left = 91.0
offset_top = 463.0
offset_right = 853.0
offset_bottom = 578.0
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_l1cm7")

[node name="BG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_04lwe")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_0v7jr")

[node name="Panel" type="Panel" parent="."]
visible = false
offset_right = 1162.0
offset_bottom = 674.0

[node name="Label" type="Label" parent="Panel"]
offset_left = 209.0
offset_top = 119.0
offset_right = 979.0
offset_bottom = 555.0
theme_override_fonts/font = ExtResource("4_gryjl")
theme_override_font_sizes/font_size = 40
text = "Step Into the Farm Quiz!

Discover how farms work and why they matter to our planet.

Make your picks carefully - keep an eye on the carbon footprint!

Tap or click anywhere to start playing."
vertical_alignment = 1
autowrap_mode = 3

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
